examples/test/testpolicy15208.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15208
  namespace: namespace239
spec:
  podSelector:
    matchLabels:
      key31: value2
      key4: value17
      key11: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value47
      podSelector:
        matchLabels:
          key4: value10
          key30: value31
